...
              strokeWidth: 3,
            ),
            const SizedBox(height: 20),

            // Текст под индикатором
            const Text(
              'Загрузка...',
              style: TextStyle(color: Colors.white70, fontSize: 14),
            ),
          ],
        ),
      ),
    );
...
