...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Все мероприятия'),
        backgroundColor: const Color(0xFF2E7D32),
        foregroundColor: Colors.white,
      ),
      body: StreamBuilder<List<CalendarEvent>>(
        stream: _eventService.getEvents(),
        builder: (context, snapshot) {
...
